--- a/index.html
+++ b/index.html
@@ -284,6 +284,9 @@
         <div class="content">    
           <script>
             // 定義點擊事件時的操作
+            function Happyj() {
+              window.location.href = ' https://hsu0920.github.io/HappyJ/'; // 跳轉到指定網址
+            }
             function MultiCalendarb() {
               window.location.href = 'MultiCalendar.html'; // 跳轉到指定網址
             }
